Taking inset: 0 for a spin to see if it helps overflow issues on mobile

--- a/packages/modal/src/scss/styles.scss
+++ b/packages/modal/src/scss/styles.scss
@@ -6,6 +6,7 @@
     position: fixed;
     left: 0;
     right: 0;
+    inset: 0;
     background-color: #001e44; // $nittany-navy
     width: 100%;
     height: 100%;
